cmake_minimum_required(VERSION 3.8)
project(zad3)

# Compiler flags
if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# Find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(geometry_msgs REQUIRED)

# Add executable
add_executable(wasd_teleop_node src/keyboardPublisher.cpp)

# Link dependencies
ament_target_dependencies(wasd_teleop_node
  rclcpp
  geometry_msgs
)

# Install
install(TARGETS
  wasd_teleop_node
  DESTINATION lib/${PROJECT_NAME}
)

# Linting (optional)
if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_cpplint_FOUND TRUE)
  set(ament_cmake_copyright_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
